# src/modules/auth/auth.controller.ts
@@ -1,12 +1,16 @@
 import { Controller, Post, Body, UnauthorizedException } from '@nestjs/common';
 import { AuthService } from './auth.service';
+import { LoginDto } from './dto/login.dto';
+import { ApiOkResponse } from '@nestjs/swagger';
+import { AuthResponseDto } from './dto/login.response.dto';
 
 @Controller('auth')
 export class AuthController {
   constructor(private authService: AuthService) {}
 
   @Post('login')
-  async login(@Body() body: { username: string; password: string }) {
+  @ApiOkResponse({ type: AuthResponseDto})
+  async login(@Body() body: LoginDto) {
     const user = await this.authService.validateUser(
       body.username,
       body.password,
