# src/modules/auth/dto/login.response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+export class AuthResponseDto {
+  @ApiProperty()
+  access_token: string;
+}
